Fix breadcrumb not showing

--- a/static/style-munstrap.css
+++ b/static/style-munstrap.css
@@ -1,3 +1,7 @@
+body{
+  padding-top: 70px;
+}
+
 img.i {
   display: block;
   margin: 10px auto;
